atividade_pratica_01 update

--- a/entregas_testes_funcionais/atividade_pratica_01/build.gradle
+++ b/entregas_testes_funcionais/atividade_pratica_01/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile group: 'org.json', name: 'json', version: '20200518'
 }
 
-mainClassName = 'entrega_introducao.App'
+mainClassName = 'atividade_pratica_01.App'
 
 test {
     useJUnitPlatform()
